packages/typ/tests/fixtures/diagnostics/0783_polyvar_branch_result_mismatch_03.ml.expected
File "0783_polyvar_branch_result_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0783_polyvar_branch_result_mismatch_03 is not a valid module name.

File "0783_polyvar_branch_result_mismatch_03.ml", line 3, characters 21-22:
3 |   | `B (y : bool) -> y
                         ^
Error: The value y has type bool but an expression was expected of type int
