packages/typ/tests/fixtures/diagnostics/0783_polyvar_branch_result_mismatch_03.ml
let use_gamma = function
  | `A (x : int) -> x
  | `B (y : bool) -> y
